<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:title="BT STATUS:"
          android:showAsAction="always"
        />

    <item android:id="@+id/action_bluetooth_connection_status"
          android:icon="@drawable/not"
          android:title="bt status"
          android:showAsAction="always"

        />
    <item android:id="@+id/action_battery_level_icon"
        android:icon="@drawable/battery_discharging_100"
        android:title="battery level"
        android:showAsAction="always"/>
    <item android:id="@+id/action_head"
        android:title="@string/action_head"
        android:showAsAction="never"></item>
    <item android:id="@+id/action_posture"
          android:title="@string/action_posture"
          android:showAsAction="never"></item>
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="100" android:showAsAction="never" />

</menu>
